--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</h1>
+  <h1><a href="index.html">NWY Co.</h1>
 </a><ol>
-<li><a href="1.html">html</li></a>
-<li><a href="2.html">dhkdh</li></a>
-<li><a href="3.html">CSS</li>
-</a><li>JavaScript</li>
+<li><a href="1.html">Projects</li></a>
+<li><a href="2.html">Circuits</li></a>
+<li><a href="3.html">drones</li></a>
+<li>what the fuck!!!!!</li>
 </ol>
 
 <h2>world wide web</h2>
